test/tests/operators/from_microsoft_sql/error_tracking_column_without_live.txt
error: `tracking_column` requires `live=true`
 --> tests/operators/from_microsoft_sql/error_tracking_column_without_live.tql:6:36
  |
6 |                    tracking_column="id"
  |                                    ^^^^ 
  |
